fix alignment issues of home buttons

--- a/css/main.css
+++ b/css/main.css
@@ -128,10 +128,22 @@ h5 {
   font-weight: lighter;
 }
 
-/*.holder {
-  min-height: 100%;
-  position: relative;
-}*/
+.home-wrapper {
+  width: 700px;
+}
+
+.home-wrapper a {
+  text-decoration: none;
+  border-bottom: none;
+  font-size: 14pt;
+  color: #5e7d93;
+}
+
+.home-wrapper a:visited {
+  text-decoration: none;
+  border-bottom: none;
+  color: #5e7d93;
+}
 
 /* Styles the home page buttons */
 .front-page-button {
@@ -140,32 +152,18 @@ h5 {
   border-width: 1px;
   border-color: #F2F2F2;
   border-left: 3px solid #5e7d93;
-  width: 50%;
-  height: 40px;
-  line-height: 40px;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 15px;
+  height: 200px;
+  width: 200px;
+  display: inline-block;
   box-shadow: 1px 1px 1px #E4E4E4;
   color: #5e7d93;
+  text-align: center;
+  line-height: 200px;
+  margin: 15px 15px 15px 15px;
 }
 
 .front-page-button:hover {
   border-left: 3px solid #ced8de;
-}
-
-.front-page-button a {
-  text-decoration: none;
-  border-bottom: none;
-  font-size: 14pt;
-  color: #5e7d93;
-}
-
-.front-page-button a:visited {
-  text-decoration: none;
-  border-bottom: none;
-  color: #5e7d93;
 }
 
 /* Keeps home page buttons centered in IE6 */
@@ -312,4 +310,16 @@ h5 {
 .layout {
   position: relative;
   top: 48px;
+}
+
+@media (max-width: 786px) {
+ .home-wrapper {
+   width: 500px;
+ }
+}
+
+@media (max-width: 587px) {
+  .home-wrapper {
+    width: 300px;
+  }
 }
